{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 114,
  "lineage": "b10429a0-6284-c3d9-fdad-fe2df521a1f4",
  "resources": [
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-031164f8db29f28b4",
            "owner_id": "453835216981",
            "tags": {
              "Name": "Built via terraform"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-031164f8db29f28b4",
            "id": "r-rtb-09deed960966f011b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09deed960966f011b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.generic_vpc.aws_internet_gateway.this",
            "module.generic_vpc.aws_route_table.primary",
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09deed960966f011b",
            "owner_id": "453835216981",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Built via terraform"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-046a696c54d40c8f4",
            "owner_id": "453835216981",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Built via terraform"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f58cbc00252993e8",
            "route_table_id": "rtb-09deed960966f011b",
            "subnet_id": "subnet-054c1b13e365f9004"
          },
          "dependencies": [
            "module.generic_vpc.aws_route_table.primary",
            "module.generic_vpc.aws_vpc.this",
            "module.generic_vpc.module.primary_subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a61b0538401dc9f",
            "route_table_id": "rtb-09deed960966f011b",
            "subnet_id": "subnet-0901c646d83b85e1c"
          },
          "dependencies": [
            "module.generic_vpc.aws_route_table.primary",
            "module.generic_vpc.aws_vpc.this",
            "module.generic_vpc.module.primary_subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063e54a6f1c75b223",
            "route_table_id": "rtb-09deed960966f011b",
            "subnet_id": "subnet-0849f61e038dd76ca"
          },
          "dependencies": [
            "module.generic_vpc.aws_route_table.primary",
            "module.generic_vpc.aws_vpc.this",
            "module.generic_vpc.module.primary_subnet.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0661b78d0b2b8f131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.40.7.0/24",
            "id": "subnet-0661b78d0b2b8f131",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Description": "Automation Services",
              "Name": "Back-end Subnet",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-046a5f6ed6a8ab4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.40.8.0/24",
            "id": "subnet-046a5f6ed6a8ab4ab",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Description": "Automation Services",
              "Name": "Back-end Subnet",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0395076d04b5a00fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.40.9.0/24",
            "id": "subnet-0395076d04b5a00fe",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Description": "Automation Services",
              "Name": "Back-end Subnet",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc.module.secondary_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-06357cae8cba0195b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.40.4.0/24",
            "id": "subnet-06357cae8cba0195b",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Secondary",
              "Tier": "Secondary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0633be8e9f055f0ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.40.5.0/24",
            "id": "subnet-0633be8e9f055f0ad",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Secondary",
              "Tier": "Secondary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0243a95de8c9ab93b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.40.6.0/24",
            "id": "subnet-0243a95de8c9ab93b",
            "map_public_ip_on_launch": false,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Secondary",
              "Tier": "Secondary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc.module.primary_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-054c1b13e365f9004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.40.1.0/24",
            "id": "subnet-054c1b13e365f9004",
            "map_public_ip_on_launch": true,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Primary",
              "Tier": "Primary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0901c646d83b85e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.40.2.0/24",
            "id": "subnet-0901c646d83b85e1c",
            "map_public_ip_on_launch": true,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Primary",
              "Tier": "Primary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:subnet/subnet-0849f61e038dd76ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.40.3.0/24",
            "id": "subnet-0849f61e038dd76ca",
            "map_public_ip_on_launch": true,
            "owner_id": "453835216981",
            "tags": {
              "Name": "Test Primary",
              "Tier": "Primary",
              "environent": "test"
            },
            "vpc_id": "vpc-0f21edd773004a855"
          },
          "dependencies": [
            "module.generic_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.generic_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:453835216981:vpc/vpc-0f21edd773004a855",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-03fdd8839197dfd70",
            "default_route_table_id": "rtb-0330ba020451e1aef",
            "default_security_group_id": "sg-000f58dc71245c11f",
            "dhcp_options_id": "dopt-d1b5f1b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f21edd773004a855",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0330ba020451e1aef",
            "owner_id": "453835216981",
            "tags": {
              "Name": "Built via terraform"
            }
          }
        }
      ]
    }
  ]
}